[project]
name = "mountaineer-billing"
version = "0.1.0"
description = ""
authors = [
    { name = "Pierce Freeman", email = "pierce@freeman.vc" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "stripe>=12.1.0",
    "iceaxe>=0.0.0,<1.0.0",
    "grpcio>=1.71.2",
    "waymark",
    "mountaineer",
    "mountaineer-auth",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.2.1",
    "ty>=0.0.1a17",
    "pytest>=8.0.0",
    "types-stripe>=3.5.2.20240106",
    "pytest-asyncio>=0.23.5",
    "freezegun>=1.5.1",
]

[tool.uv.sources]
#mountaineer = { path = "../../mountaineer", editable = true }
#mountaineer-auth = { path = "../mountaineer-auth", editable = true }

[tool.ruff]
force-exclude = true
extend-exclude = ["mountaineer_billing/stripe/v*"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "mountaineer",
    "first-party",
    "local-folder",
]
combine-as-imports = true

[tool.ruff.lint.isort.sections]
mountaineer = ["mountaineer", "mountaineer_auth"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Disable print statements
select = ["E4", "E7", "E9", "F", "I001", "T201"]

[tool.pytest.ini_options]
testpaths = ["mountaineer_billing/__tests__"]
asyncio_default_fixture_loop_scope = "function"
